Change colors, add mobile version, fix layout bugs.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,8 +1,4 @@
 /* Universal Styles */
-
-html {
-}
-
 body {
 	font-size: 18px;
 	font-family: Roboto, Arial, sans-serif;
@@ -13,10 +9,15 @@ body {
 h1 {
 	font-size: 2.25em;
 	font-weight: bold;
+	letter-spacing: 2px;
+	margin-bottom: 32px;
 }
 
 h2 {
 	font-size: 2em;
+	font-weight: 500;
+	letter-spacing: 1.25px;
+	margin-top: 32px;
 }
 
 h3 {
@@ -24,47 +25,35 @@ h3 {
 }
 
 h4 {
-	font-size: 1.1em;
+	font-size: 1.2em;
+	margin-bottom: 8px;
 }
 
 h5 {
-	font-size: 0.75em;
+	margin-bottom: 8px;
+	font-size: 1.1em;
 }
 
+h6 {
+	font-size: 0.7em;
+	font-style: italic;
+	margin-top: 32px;
+}
+
+h7 {
+	font-size: 0.8em;
+	margin-right: 16px;
+}
+
+p {
+	margin-top: 24px;
+}
 
 .container {
 	display: flex;
 }
 
-.button {
-	background-color: #553400;
-	display: flex;
-	justify-content: center;
-	width: 100%;
-	color: white;
-	padding: 8px 0px;
-}
-
-.big-image {
-	width: 60%;
-}
-
-.left-column .big-image {
-	width: 100%;
-}
-
-.square-image {
-	width: 38%;
-}
-
-.course-image {
-}
-
-.news-box {
-}
-
 /* Header */
-
 header {
 	display: flex;
 	align-items: center;
@@ -81,6 +70,7 @@ header {
 	align-items: center;
 	font-family: Rajdhani, Arial, sans-serif;
 	font-size: 1.25em;
+	flex: 1;
 }
 
 .logo img {
@@ -88,39 +78,46 @@ header {
 }
 
 span.logo-academy {
-	color: #805615;
+	color: #9A0000;
 }
 
-header nav {
+nav {
 	display: flex;
 	align-items: center;
+	padding-right: 16px;
 }
 
-header nav span {
-	margin: 0 8px;
+header .button {
+	display: flex;
+	height: 64px;
+	padding: 0px 8px;
+	align-items: center;
+	transition: background-color 100ms linear;
 }
 
-header .logo {
-  flex: 1;
+header .button:hover {
+	background-color: #9A0000;
+	color: white;
 }
 
-header nav span a {
-	font-size: 1em;
-	color: #553400;
+header .button:active {
+	background-color: #B91414;
+	color: white;
 }
+
 /* Banner Section */
 .banner {
-	background-color: #d4ab6a;
+	background-color: #dddddd;
 	width: 100%;
 	margin-top: 32px;
-	padding: 64px 0px 32px 24px;
+	padding: 64px 24px 32px 24px;
 	display: flex;
 	align-items: center;
 }
 
 .content-items {
 	padding-left: 40px;
-	padding-right: 100px;
+	padding-right: 40px;
 	display: flex;
 	flex-direction: column;
 	align-items: left;
@@ -128,28 +125,43 @@ header nav span a {
 	flex-wrap: wrap;
 }
 
-.content-items h1 {
-	margin-bottom: 32px;
-}
-
 .content-items h3 {
 	margin-bottom: 32px;
 }
 
+.banner .button {
+	background-color: #4e4e4e;
+	display: flex;
+	justify-content: center;
+	width: 100%;
+	color: white;
+	padding: 8px 0px;
+	transition: all 300ms linear;
+}
+
+.banner .button:hover {
+	background-color: #9A0000;
+}
+
+.banner .button:active {
+	background-color: #B91414;
+}
+
 /* Main Section */
 .main {
-	background-color: #ffdeaa;
+	background-color: #f2f2f2;
 	width: 100%;
 	display: flex;
 	align-items: flex-start;
+	padding-left: 24px;
 }
 
 .left-column {
-	display: flex;
 	flex-wrap: wrap;
 	width: 60%;
 	align-items: flex-start;
-	padding: 32px 24px 32px 24px;
+	padding: 32px 24px 32px 0px;
+	border-right: 1px solid #dddddd;
 }
 
 .right-column {
@@ -162,28 +174,13 @@ header nav span a {
 	width: 100%;
 	display: flex;
 	align-items: center;
-	border-left: 2px solid #d4ab6a;
-	padding: 16px 0px 16px 16px;
-	margin-right: -2em;
+	padding: 16px 16px 16px 16px;
 }
 
 .news-items {
-	width: 100%;
 	padding-left: 16px;
 	display: flex;
 	flex-direction: column;
-}
-
-.left-column h2 {
-	margin-top: 32px;
-}
-
-.left-column p {
-	margin-top: 24px;
-}
-
-.left-column h5 {
-	margin-top: 32px;
 }
 
 .right-column span {
@@ -191,29 +188,29 @@ header nav span a {
 }
 
 .read-more {
-	color: #805615;
+	color: #9A0000; 
+	text-decoration: underline;
 }
 
 .news-box.first-news {
 	padding-top: 32px;
 }
 
-.news-box.third-news {
-	background-color: #d4ab6a;
+.news-box.shaded-news {
+	background-color: #dddddd;
 }
-
 
 /* Courses Section */
 .courses {
-	background-color: #d4ab6a;;
+	background-color: #dddddd;
 	width: 100%;
 	display: flex;
 	flex-direction: column;
 	padding-bottom: 16px;
 }
 
-.courses .title {
-	margin: 32px auto 32px auto;
+.title {
+	margin: 0px auto 32px auto;
 }
 
 .all-courses-box {
@@ -236,56 +233,217 @@ header nav span a {
 }
 
 .course-items {
-	padding: 16px 0px 24px 16px;
+	padding: 16px 16px 24px 16px;
 }
 
 .course-items h3 {
 	margin-bottom: 16px;
-	font-weight: bold;
+	font-weight: 500;
 }
-
-.course-items h4 {
-	margin-bottom: 8px;
-}
-
-.course-items h5 {
-	margin-bottom: 8px;
-	font-size: 1em;
-}
-
-/* Quotes Section */
 
 /* Thesis Section */
+.thesis {
+	background-color: #f2f2f2;
+	display: flex;
+	flex-direction: column;
+	padding: 0px 0px 0px 24px;
+}
+
+.thesis .title {
+	margin: 0px auto;
+}
+
+.thesis-box {
+	display: flex;
+	align-items: flex-start;
+}
+
+.thesis-box .left-column {
+	border-right: 0px;
+}
+
+.thesis-box .right-column {
+	padding-top: 32px;
+}
+
+.thesis-box h3 {
+	margin-top: 24px;
+	font-weight: 500;
+}
+
+.news-items h3 {
+	margin-top: 0px;
+	font-weight: normal;
+}
 
 /* Footer */
 
 footer {
-  background-color: #9b9b9b;
-  padding: 1.5rem 2rem;
-
+	background-color: #f2f2f2;
+	padding: 24px 8px 48px 24px;
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+	border-top: 1px solid #dddddd;
 }
 
-footer .content {
-  padding: 0 0;
-  height: 100%;
-  width: 100%;
-  color: white;
-  display: flex;
-  font-size: .75rem;
+/* Images */
+.big-image {
+	width: 60%;
 }
 
-footer .copyright {
-  flex-grow: 1;
+.left-column .big-image {
+	width: 100%;
 }
 
-footer span {
-  font-family: "Roboto-Regular", sans-serif;
-  font-size: 12px;
+.square-image {
+	width: 35%;
 }
 
-@media only screen and (max-width: 760px) {
-  footer .content {
-    font-size: .625rem;
-  }
+/* Media options */
+@media only screen and (max-width: 660px) {
+	h1 {
+		font-size: 2em;
+		font-weight: 500;
+		letter-spacing: 1.5px;
+		margin-top: 32px;
+	}
+
+	h2 {
+		font-size: 1.8em;
+		margin-top: 32px;
+	}
+
+	h3 {
+		font-size: 1.2em;
+	}
+}
+
+@media only screen and (min-width: 660px) {
+	.mobile {
+		display: none;
+	}
+}
+
+@media only screen and (max-width: 660px) {
+	.desktop {
+		display: none;
+	}
+
+	.mobile {
+		display: flex;
+		justify-content: space-around;
+		width: 100%;
+	}
+
+	.mobile nav {
+		padding: 0px;
+	}
+
+	.mobile a {
+		display: flex;
+		height: 64px;
+		padding: 0px 20px;
+		align-items: center;
+	}
+	
+	.mobile a:hover {
+		background-color: #9A0000;
+	}
+
+	.banner {
+		margin-top: 0px;
+		padding: 0px 0px 32px 0px;
+		display: flex;
+		align-items: center;
+		flex-direction: column;
+	}
+
+	.content-items {
+		padding-left: 16px;
+		padding-right: 16px;
+	}
+
+	.content-items h3 {
+		margin-bottom: 24px;
+	}
+
+	.main {
+		padding-left: 0px;
+	}
+
+	.right-column {
+		width: 100%;
+	}
+
+	.news-box {
+		flex-direction: column;
+	}
+
+	.news-items {
+		width: 100%;
+		padding-top: 24px;
+	}
+
+	.news-box.first-news {
+		padding-top: 16px;
+	}
+
+	.news-box.shaded-news {
+		background-color: #f2f2f2;
+	}
+
+	.courses {
+		background-color: #f2f2f2;
+		border-top: 1px solid #dddddd;
+	}
+
+	.title {
+	    margin: 0px auto 16px auto;
+	}
+
+	.course-button {
+		display: flex;
+		justify-content: center;
+		width: 100%;
+		margin: 0px 16px 16px 16px;
+		align-items: center;
+		transition: background-color 100ms linear;
+		background-color: #dddddd;
+	}
+
+	.course-button:hover {
+			background-color: #9A0000;
+			color: white;
+	}
+
+	.thesis {
+		border-top: 1px solid #dddddd;
+		padding: 0px;
+	}
+
+	.thesis-box .left-column {
+		width: 100%;
+		padding-right: 0px;
+		padding-bottom: 24px;
+	}
+
+	footer {
+		padding: 40px 8px 16px 24px;
+	}
+
+	h7 {
+		font-size: 0.6em;
+	}
+
+	.banner .big-image {
+		height: 180px;
+		width: 100%;
+		object-fit: cover;
+	}
+
+	.square-image {
+		width: 100%;
+	}
 }
 
